fix galaxy s5 spacing on projects

--- a/src/styles/MyProjects.css
+++ b/src/styles/MyProjects.css
@@ -7,8 +7,8 @@
 }
 
 .MyProjects h1 {
-  margin: 0vh 38vw 6vh 42vw !important;
-  width: 20vw !important;
+  margin: 0vh 38vw 6vh 37vw !important;
+  width: 45vw !important;
   z-index: 2;
 }
 
