--- a/src/styles/ProfileImage.css
+++ b/src/styles/ProfileImage.css
@@ -5,24 +5,24 @@
     max-width: 24vw;
     margin-left: 9.5vw;
     top: 0vh;
-    border: 1px dotted rgb(7, 6, 7);;
+    border: 1px dotted rgb(7, 6, 7);
     border-radius: 12px;;
     box-shadow:  2px 2px 5px 0px rgb(20, 17, 20);;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 377px) {
     .ProfileImage img {
-      width: 35vw !important;
-      max-width: 90vw !important;
-  }
-  .ProfileImage {
-      display: block;
-      position: relative;  
-      top: 20vh !important;
-      width: 35vw !important;
-      margin-left: 36vw !important;
-      z-index: 2;
-  }
+        width: 35vw !important;
+        max-width: 90vw !important;
+    }
+    .ProfileImage {
+        display: block;
+        position: relative;  
+        top: 20vh !important;
+        width: 35vw !important;
+        margin-left: 36vw !important;
+        z-index: 2;
+    }
 }
 
 
